--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- BOOTSTRAP CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="src/style/style.css">
+  <link rel="stylesheet" type="text/css" href="src/style/main.css">
 
   <script src="src/js/main.js" defer></script>
 
