--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <!-- BOOTSTRAP CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="src/style/main.css">
+  <link rel="stylesheet" type="text/css" href="resources/style/main.css">
 
-  <script src="src/js/main.js" defer></script>
+  <script src="resources/js/main.js" defer></script>
 
 </head>
 
