update pun generator program. API is EOL

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <link rel="stylesheet" type="text/css" href="resources/style/main.css">
 
-  <script src="resources/js/main.js" defer></script>
+  <script src="resources/js/main2.js" defer></script>
 
 </head>
 
@@ -43,7 +43,7 @@
         <h1 class="display-5 fw-bold">
           <p class="text-center" id="punAnswer">
           </p>
-          <center>
+          
           <button class="btn btn-outline-danger btn-lg" style="display: none;" id="showAnswer" type="button">
             I give up <i class="fa-solid fa-face-angry fa-2xl"></i>
           </button>
@@ -52,14 +52,14 @@
       </div><!-- end of Pun Answer -->
     </div><!-- end of jumbotron puns -->
     <div class="p-1 mb-1 bg-gradient rounded-4" id="buttonContainer">
-      <div class="container-fluid py-5">
+      <div class="container-fluid py-5 text-center">
         <h1 class="display-10 fw-bold">
-          <p class="text-center" id="puns">Tell me a pun</p>
-          <center>
+          <p>Tell me a pun</p>
+
             <button class="btn btn-primary btn-lg rounded-circle p-5" type="button" id="punRefresh">
               <i class="fa-solid fa-arrows-rotate fa-2xl"></i>
             </button>
-          </center>
+
         </h1>
       </div>
     </div><!-- end of button div-->
