--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <link rel="stylesheet" type="text/css" href="resources/style/main.css">
 
-  <script src="resources/js/main2.js" defer></script>
+  <script src="resources/js/main.js" defer></script>
 
 </head>
 
