updating project with new local puns.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <link rel="stylesheet" type="text/css" href="resources/style/main.css">
 
-  <script src="resources/js/main.js" defer></script>
+  <script type="module" src="resources/js/main2.js" defer></script>
 
 </head>
 
@@ -56,7 +56,7 @@
         <h1 class="display-10 fw-bold">
           <p>Tell me a pun</p>
 
-            <button class="btn btn-primary btn-lg rounded-circle p-5" type="button" id="punRefresh">
+            <button class="btn btn-primary btn-lg rounded-circle p-5" type="button" id="getPun">
               <i class="fa-solid fa-arrows-rotate fa-2xl"></i>
             </button>
 
