updated, removed non used code

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <!-- end of nav tabs -->
       <div class="p-1 mb-40 bg-dark rounded-3">
         <div class="row">
-          <div class="container-sm py-5 overflow-y-visible" id="qContainer">
+          <div class="container-sm py-5 overflow-y-visible">
             <h1 class="display-5 fw-bold">
               <p class="text-center" id="punQuestion">
                 Click button to generate a pun!
@@ -46,7 +46,7 @@
           <!-- end of Pun Question -->
         </div>
         <div class="row">
-          <div class="container-sm py-5 text-center" id="aContainer">
+          <div class="container-sm py-5 text-center">
             <h1 class="display-5 fw-bold">
               <div class="row">
                 <div class="row justify-content-md-center">
